--- a/HW8.rmd
+++ b/HW8.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Homework 7 "
+title: "Homework 9 "
 author: "Tyson Brost"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output:
@@ -21,61 +21,93 @@ knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 ```{r load_libraries, include=FALSE}
 # Use this R-Chunk to load all your libraries!
 #install.packages("tidyverse") # run this line once in console to get package
+library(tidyverse)
+library(pander)
+library(readxl)
+library(tseries)
+library(mosaic)
+
+
+JT <- read_excel("jtrain.xls")
+JT$scrap <- case_when( JT$scrap == "." ~ "0" , JT$scrap != "." ~as.character(log(as.numeric(JT$scrap))))
+JT$scrap <- as.numeric(JT$scrap)
+JT <- JT %>% drop_na(grant)
+JT <- JT %>% drop_na(scrap)
+JT <- JT %>% select(c(Year, scrap, grant, employees, sales,avsalary, totalhours, totaltrain))
+
 ```
 
 
 ## {.tabset .tabset-pills .tabset-fade}
 
-### Problem #1
-##### State with reason whether the following statements are true, false or uncertain:
+### Problem #1 - 
 
-#### - Despite perfect multicollinearity, OLS estimators are BLUE
-Technically this is false, the estimators would be the best and remain unbiased but realistically this regression would make little sense, it is essentially y=ax. Our regression basically shows us that the predicted value (or that one of the other variables) matches perfectly with one of our variables
+##### Consider the following simple regression model where scrap is the firm scrap rate and grant is a dummy variable indicating whether a firm received a job training grant.
 
-#### - In case of high multicollinearity, it is not possible to assess the individual significance of one or more partial regression coefficients.
-True: If the value of one variable significantly affects that of another variable its is difficult to tell how much the value of the second variable alone would affect the output. In reality it would be determined as a portion of both the first and the second, as well as their interaction.
+![ ](hm9.png)
 
-#### - High pair-wise correlations do not suggest that there is high multi-collinearity
-False: If high correlation exists between pairs this is a key indicator that these variables may be correlated as a whole. Although it is possible to observe multicollinearity with relatively low pair-wise correlations as well.
+#### What else might contribute to scrap that is not in this current model
 
-#### - Ceteris Paribus, the higher the VIF is, the larger the variances of OLS estimators
-True: Variance of any given OLS estimator is multiplied by VIF so assuming all else remains equal a larger VIF will result in a larger variance.
+The current model literally just includes whether or not a company received a grant for training. the actual amount of training completed, number of employees, number of employees trained, types of training, salaries, work environment and uniion information could also be impactful on this model.
+
+####  Estimate the simple regression model using the data in JTRAIN estimate the above model and interpret your findings.
+
+```{r, echo =FALSE}
+lm.mult2 <-lm(scrap ~ grant, data=JT)
+summary(lm.mult2)
+```
+
+We calculate an insignificant variable of grants, with a P-val of 0.5, and an Adj-R^2 of -0.001, based on this model we can't conclude that grants have a significant effect on the scrap rate.
+
+####  Calculate the Jarque-bera test in R studio. You will need to install the ‘tseries’ package to conduct this test.  Interpret your findings of this test
+
+```{r, echo =FALSE}
+jarque.bera.test(residuals(lm.mult2))
+```
+
+With such a large Test-stat and low P-value we would reject the null Hypo. that the data are normally distributed and state significant evidence of the alternative, that the data (error terms) is not normally distributed.
+
+####  What can be done to the model based upon your results from the Jarque-bera test?
+
+Additional transformations could be performed on the data, if autocorrelation is a worry then lags or leads could be introduced, this would all be with the goal of decreasing the Test-stat to a level that we could fail to reject our null that the data is normally distributed.
 
 ### Problem #2
 
-##### In the published paper “Futures contracts in water leasing: an experimental analysis using basin characteristics of the Rio Grande, NM” the following regression equation outputs were estimated to predict the price per acre foot of a water right:
+#### Create a summary for each variable and report what this tells you about each variable. Are there any potential outliers for any variable?  If so what should you do? 
 
-![ ](hm-8.png)
+```{r}
 
-#### Assess the predictability of this model. Is it a good model or not, explain in detail why, you should use multiple statistical inference techniques.
+JT <- filter(JT, JT$employees != ".")
+JT <- filter(JT, JT$sales != ".")
+JT <- filter(JT, JT$avsalary != ".")
+JT <- filter(JT, JT$totalhours != ".")
 
-Initially looking to the R^2 value we see that the model is only able to account for ~20% of variation. Though with closer examination we can see that the F statistic and a large proportion of our individual terms are significant at the 1% level. 29 out of 38 variables to be exact, including the constant. So while we only get 20% of the variation we can do so with fairly substantial confidence. Some model is better than no model.
+map(JT, favstats)
+```
 
-#### What does the term quantity with its estimated coefficient tell you about the price? Does this make sense?
+Based on the above summaries it may be worth looking into the sales and totalhours/totaltrain variables, the former having a significant gap within its quartiles and the later two being heavily skewed. Removal of these outliers could help us better understand a relationship within a smaller portion of the population.
 
-Increasing the overall quantity of a deal decreases the cost per-acre foot by 1.95 dollars. This makes sense. Buying in bulk -> cheaper prices.
+#### If necessary from part a, appropriately clean up the data and then create a lag variable of one period for the sales variable. Run the following regression equation, report and evaluate the results of the regression
 
-#### What do the terms 1 month 2 month and 3 month futures tell you about the price considering that the omitted variable here is the spot market? Do these three variables make sense in relation to the spot market price? 
+```{r}
+JT <- filter(JT, JT$sales > 1501877 & JT$sales < 8347242)
+JT <- filter(JT, JT$totalhours < 40)
+JT <- filter(JT, JT$totaltrain < 20.25)
+JT$sales_lag <- lag(JT$sales, n=1)
+JT <- JT %>% drop_na()
 
-That by making a purchase ahead of time you will pay less per acre-foot. This does make sense, risk associated with preemptive purchases must be accounted for by cheaper prices.
+lm.mult2 <-lm(scrap ~ grant + as.numeric(sales) + as.numeric(sales_lag), data=JT)
+summary(lm.mult2)
+jarque.bera.test(residuals(lm.mult2))
+```
 
-##### One of the main issues with regression is multicollinearity. A variance inflation factor was calculated for each of the variables and produced the following results for a few of the variables:
 
+![ ](hm9.2.png)
 
-![ ](hm-8-VIF.png)
+Grant is now significant at a 0.05% significance level neither sales nor sales lagged are though. Our P-val has been significantly improved but still lacks significance. The JB test is still rejecting the null but the statistics has dropped from 800 to 80 so there was a ten fold movement closer to 0.
 
-#### Is multicollinearity a problem in this model?  Explain why or why not?  Should any remediation be done to this model?
+#### Are there any problems with this regression equation that you need to test for (think of the statistical diseases). If so report the results of those tests and then explain what method you would need to do to correct for those diseases.
 
-No, the general rule of thumb when using VIF to identify multicollinearity is that a VIF must exceed 10, none of the above values do so we would conculde that any correlation that does exist does not affect one variable to another to a significant or worrying degree.
-
-### Problem #3
-
-##### Explain two methods to correct for multicollinearity with the possible consequences of using these methods. 
-
-The two primary methods for resolving multicollinearity are:
-
-- Transformation of variables
-  - lagging or leading variables may help but this is not an option when time is a variable of interest itself.
-- Additional/new Data
-  - By obtaining new data you have the chance to rerun the same testing but without any bias or sample error from the previous set. Obtaining additional or new data is costly and there remains the chance that this correlation is present in the population as a whole
+There is also likely autocorrelation between the variables such as number of employee's and many of the other variables running the VIF test to verify and then if needed we would lag some of these variables as well. though it is difficult to do this to some extent and maintain a useful and interpretable dataset.
+ 
 
